fix sport assessment